--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/myjsp/add.jsp=UTF-8
+encoding//src/main/webapp/myjsp/afterRegister.jsp=UTF-8
 encoding//src/main/webapp/myjsp/login.jsp=UTF-8
 encoding//src/main/webapp/myjsp/register.jsp=UTF-8
 encoding/pom.xml=UTF-8
