--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,22 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.3</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/dom4j/dom4j -->
+    <dependency>
+      <groupId>dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+      <version>1.6.1</version>
+    </dependency>
+
+  </dependencies>
 	<build>
 		<plugins>
 			<plugin>
