--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,19 @@
     </dependency>
 
   </dependencies>
+
+  <build>
+    <resources>
+      <resource>
+        <directory>src/main/java</directory>
+        <includes>
+          <include>**/*.xml</include>
+        </includes>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+
+  </build>
 	<build>
 		<plugins>
 			<plugin>
