--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,20 @@
       <version>1.6.1</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>3.9</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>3.9</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
@@ -123,9 +137,6 @@
         <filtering>true</filtering>
       </resource>
     </resources>
-
-  </build>
-	<build>
 		<plugins>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
